fix(fab): Adjust fab line-height to fix very-large font vertical spacing.

--- a/packages/mdc-fab/_mixins.scss
+++ b/packages/mdc-fab/_mixins.scss
@@ -333,6 +333,8 @@ $mdc-fab-icon-enter-duration_: 180ms;
     width: auto;
     max-width: 100%;
     height: $mdc-fab-extended-height;
+    /* @alternate */
+    line-height: inherit;
   }
 }
 
